priklad service.yml

--- a/src/Cvut/Fit/BiPwt/BlogBundle/Resources/config/services.yml
+++ b/src/Cvut/Fit/BiPwt/BlogBundle/Resources/config/services.yml
@@ -1,11 +1,29 @@
-# timto lze vymenit implementaci sluzeb (napr. pro unit-testovani)
-parameters:
-  blog_service_class: Cvut\Fit\BiPwt\BlogBundle\Service\MemoryBlogService
-  user_service_class: Cvut\Fit\BiPwt\BlogBundle\Service\MemoryUserService
-
 services:
-  cvut_fit_ict_bipwt_blog_service:
-    class: %blog_service_class%
 
-  cvut_fit_ict_bipwt_user_service:
-    class: %user_service_class%
+## timto lze vymenit implementaci sluzeb (napr. pro unit-testovani)
+#
+#  cvut_fit_ict_bipwt_blog_service:
+#    alias: cvut_fit_ict_bipwt_blog_service.memory
+#
+#  cvut_fit_ict_bipwt_user_service:
+#    alias: cvut_fit_ict_bipwt_user_service.memory
+#
+### BLOG
+#
+#  cvut_fit_ict_bipwt_blog_service.memory:
+#    class: Cvut\Fit\BiPwt\BlogBundle\Service\MemoryBlogService
+#
+#  cvut_fit_ict_bipwt_blog_service.db:
+#    class: Cvut\Fit\BiPwt\BlogBundle\Service\DatabaseBlogService
+#    calls:
+#      - [ setManager, [ @doctrine.orm.entity_manager ] ]
+#
+### USER
+#
+#  cvut_fit_ict_bipwt_user_service.memory:
+#    class: Cvut\Fit\BiPwt\BlogBundle\Service\MemoryUserService
+#
+#  cvut_fit_ict_bipwt_user_service.db:
+#    class: Cvut\Fit\BiPwt\BlogBundle\Service\DatabaseUserService
+#    calls:
+#      - [ setManager, [ @doctrine.orm.entity_manager ] ]
