Started proper work on frontend.  FIrst implementation of list of posts and post details.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,5 +1,5 @@
 blog:
-    resource: "@BlogBundle/Controller/"
+    resource: "@BlogBundle/Controller/DefaultController.php"
     type:     annotation
     prefix:   /
 
