User login, logout and registration implemented. Login implemented as form (by Cookbook)

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,6 +3,12 @@ blog:
     type:     annotation
     prefix:   /
 
+authentication:
+    resource: "@BlogBundle/Controller/LoginController.php"
+    type:     annotation
+    prefix:   /
+
+
 logout:
     path:   /logout
 
